# contained

./: LICENSE  README.md  contained.py  noxfile.py  pyproject.toml
test/: test_contained.py  test_docs.py
