[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "contained"
version = "0.0.1"
authors = [{name = "Jeremiah Paige", email = "ucodery@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["description"]

[project.urls]
Home = "https://github.com/ucodery/contained"
